--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Broken"
 uuid = "68a0b7e2-4204-11ea-065e-cd7827818ec5"
 authors = ["claresinger <clareees@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
